# Xcurse

./: .gitignore  CMakeLists.txt  README.md  doxygen-config  main.cpp
doc/html/: Common_8cpp.html  Constants_8h.html  Converter_8h.html  Converter_8h_source.html  DataWindow_8h_source.html  Display_8h.html  Display_8h_source.html  GenericTextObject_8cpp.html  GenericTextObject_8h.html  GenericTextObject_8h_source.html  GenericWindowObject_8cpp.html  GenericWindowObject_8h.html  GridWindow_8h.html  GridWindow_8h_source.html  Layout_8cpp.html  Logger_8cpp.html  Logger_8h.html  Logger_8h_source.html  Pixel_8cpp.html  Stylable_8cpp.html  TextField_8h.html  Xcurse_8h_source.html  classConsole_1_1Logger-members.html  classConsole_1_1Logger.html  classXcurse_1_1BarChartWindow-members.html  classXcurse_1_1BaseDisplayObject-members.html  classXcurse_1_1Display-members.html  classXcurse_1_1Display.html  classXcurse_1_1GenericTextObject.html  classXcurse_1_1GenericWindowObject.html  classXcurse_1_1GridWindow-members.html  classXcurse_1_1Layout-members.html  classXcurse_1_1Layout.html  classXcurse_1_1Pixel.html  classXcurse_1_1Stylable-members.html  classXcurse_1_1Stylable.html  classXcurse_1_1TextField-members.html  classXcurse_1_1TextField.html  classes.html  dir_66d22e3c827f38fa8649cca280266c51.html  (+17 more)
docs/html/: BaseDisplayObject_8cpp.html  Circle_8cpp.html  Circle_8h.html  Circle_8h_source.html  Common_8cpp.html  Common_8h.html  (+133 more)
src/: Xcurse.h  color.h  logger.cpp  logger.h  objects.cpp  pixel.cpp  stylable.cpp  window.h  windows.cpp  xcurse.cpp  xcurse.h
test/: test.cpp
(+172 files in other folders)
